# cadastro-cursos-projeto-alura

./: .gitignore  .pylintrc  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
escola/: admin.py  apps.py  models.py  serializer.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py
setup/: settings.py  urls.py
tests/: test_version.py
